--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div id="output">
         <select name="out_lang" id="out_lang">
+            <option value="hi">Hindi</option>
             <option value="en">English</option>
             
         </select>
